# hardware-effects-gpu

./: CMakeLists.txt  NOTES  common.h
divergence/: CMakeLists.txt  benchmark.py  divergence-benchmark.h  divergence.cu  init.cpp  predication.cu
divergence/interative-profile/: interative-profile.nsight-cuproj
divergence/profile/: profile.nsight-cuproj
divergence/static_profile/: static_profile.nsight-cuproj
divergence/trynew/: trynew.nsight-cuproj
